Bug 1062792. Don't add clipped out parts of a layer to the opaque region. r=roc