layout/base/FrameLayerBuilder.cpp
@@ -3593,7 +3593,13 @@ ContainerState::PostprocessRetainedLayers(nsIntRegion* aOpaqueRegionForContainer
         data->mAnimatedGeometryRoot = animatedGeometryRootToCover;
         data->mFixedPosFrameForLayerData = e->mFixedPosFrameForLayerData;
       }
-      data->mOpaqueRegion.Or(data->mOpaqueRegion, e->mOpaqueRegion);
+
+      nsIntRegion clippedOpaque = e->mOpaqueRegion;
+      const nsIntRect* clipRect = e->mLayer->GetClipRect();
+      if (clipRect) {
+        clippedOpaque.AndWith(*clipRect);
+      }
+      data->mOpaqueRegion.Or(data->mOpaqueRegion, clippedOpaque);
       if (e->mHideAllLayersBelow) {
         hideAll = true;
       }
